--- a/exercicios-aula/Ex 5 - Toggle/index.html
+++ b/exercicios-aula/Ex 5 - Toggle/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 
 <body>
     <button type="button" id="button" onclick="esconder()">Click</button>
     <p id="paragrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, natus praesentium. Eos, quasi. Veniam, quae dolorum laborum maiores earum, necessitatibus iure quidem maxime dolorem aliquid ducimus, vel cupiditate cum ex.</p>
-    <script src="index.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
