--- a/exercicios-aula/Ex 1 - Submit e Prompt/index.html
+++ b/exercicios-aula/Ex 1 - Submit e Prompt/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Brincando com Input e Submit</title>
 </head>
 
 <body>
-    <form id="form" onsubmit="mostrarNome()">
-        Enter name:
+    <form id="form">
+        Digite seu nome:
          <input type="text" name="fname" id="name">
         <input type="submit" value="Submit" id="button">
     </form>
-    <script src="./index.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
