--- a/exercicios-aula/Ex 2 - Dom/index.html
+++ b/exercicios-aula/Ex 2 - Dom/index.html
@@ -6,16 +6,16 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta http-equiv="X-UA-Compatible" content="ie=edge">
-            <title>PORTFOLIO</title>
+            <title>Adicionando Estilo com JS</title>
             <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
             <link rel="stylesheet" href="css/style.css">        
         </head>
 
         <body>
-            <h1>A HEADING</h1>
+            <h1>Adicionando Estilos com JS</h1>
             <div>
                 <p id='item'>A PARAGRAPH</p>
-                <p class="HERO">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius debitis itaque incidunt sint, doloribus ducimus quae tempore quod maxime minima eveniet unde amet recusandae reiciendis libero quis excepturi laboriosam sunt!</p>
+                <p class="hero">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius debitis itaque incidunt sint, doloribus ducimus quae tempore quod maxime minima eveniet unde amet recusandae reiciendis libero quis excepturi laboriosam sunt!</p>
             </div>
             <script src="./js/script.js"></script>
         </body>
