--- a/exercicios-aula/Ex 3 - Criar elemento/index.html
+++ b/exercicios-aula/Ex 3 - Criar elemento/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Adicionando Elementos com JS</title>
 </head>
 
 <body>
     <p>Click no botão para criar um elemento de tag P</p>
-    <button type="button" id="button" onclick="minhaFuncao()">Acidionar</button>
+    <button type="button" id="button">Adicionar</button>
 
     <script src="index.js"></script>
 </body>
