--- a/exercicios-aula/Ex 4 - Validação/index.html
+++ b/exercicios-aula/Ex 4 - Validação/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ex 2 - Login</title>
+    <title>Validação de Formulário</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
