--- a/exercicios-aula/Ex 1 - Console e Prompt/index.html
+++ b/exercicios-aula/Ex 1 - Console e Prompt/index.html
@@ -3,11 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Manipulando o DOM</title>
   <link rel="stylesheet" href="./css/style.css">
-  <title>Começando a manipular o DOM</title>
 </head>
 <body>
-  <!-- Adicionar link externo -->
+  <div id="container">
+    <div id="box"></div>
+    <button id="btn">Clique aqui</button>
+  </div>
+
+  <div>
+    <p>Digite alguma coisa:</p>
+    <input type="text">
+  </div>
+  <script src="./js/index.js"></script>
 </body>
 </html>
-
