--- a/exercicios-aula/Ex 5 - Toggle/index.html
+++ b/exercicios-aula/Ex 5 - Toggle/index.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Menu Toogle com JS</title>
+    <title>Efeito Toggle com JS</title>
 </head>
 
 <body>
-    <button type="button" id="button" onclick="esconder()">Click</button>
-    <p id="paragrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, natus praesentium. Eos, quasi. Veniam, quae dolorum laborum maiores earum, necessitatibus iure quidem maxime dolorem aliquid ducimus, vel cupiditate cum ex.</p>
-    <script src="./js/script.js"></script>
+    <div id="minhaId">
+        <h1>Efeito Toggle com JS</h1>
+        <h2>Como esconder e mostrar um conteúdo utilizando classes de CSS</h2>
+      </div>
+      <button class="esconder">Esconder</button>
+      <button class="mostrar">Mostrar</button>
+
+      <script src="./js/script.js"></script>
 </body>
 
 </html>
