--- a/homework/index.html
+++ b/homework/index.html
@@ -12,29 +12,17 @@
 <body>
   <div class="container">
     <h1>Cálculo de Média</h1>
-    <form name="calculo" method="post" action="">
-      <p>
-        <input type="text" class="nota1" placeholder="Digitar Nota 1" value="" />
-      </p>
-      <p>
-        <input type="text" class="nota2" placeholder="Digitar Nota 2" value="" />
-      </p>
-      <p>
-        <input type="text" class="media" placeholder="Nota Média" readonly="readonly" value="" />
-      </p>
-      <p>
-        <button>Calcular Média</button>
-      </p>
-    </form>
+    <div name="calculo">
+        <input type="text" class="nota1" placeholder="Digitar Nota 1">
+        <input type="text" class="nota2" placeholder="Digitar Nota 2">
+        <p id="button">Calcular Média</p>
+        <p class="media-titulo">Sua média é:<span class="media"> </span></p>
+    </div>
   </div>
 
   <script>
-      // Declarar as variáveis do Input Nota 1, Nota 2 e Média
+      
 
-      // Capturar os valores do Input Nota 1, Nota 2 e Média
-      // Dica: 8usar parseInt para retornar o valor do input um número inteiro *
-
-      // Fazer a média e mostrar no Input Média
   </script>
 </body>
 
