--- a/exercicios-aula/Ex 1 - Console e Prompt/index.html
+++ b/exercicios-aula/Ex 1 - Console e Prompt/index.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Manipulando o DOM</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
+  
   <div id="container">
     <div id="box"></div>
     <button id="btn">Clique aqui</button>
   </div>
 
   <div>
-    <p>Digite alguma coisa:</p>
+    <p>Digite alguma coisa abaixo:</p>
     <input type="text">
   </div>
-  <script src="./js/index.js"></script>
+
+  <script>
+    // Capturei o botão e armazenei na variável
+    let btnClicar = document.getElementById("btn")
+    
+    // Capturar input e armazenar
+    let inputValor = document.querySelector("input")
+
+    // nomeVar = addEventListener("Açao Esperada", function(par){
+    //   açao esperada
+    // })
+
+    // Função de Mostrar um Alert com o valor digitado
+
+    btnClicar.addEventListener("click", function(){
+      
+      // Mostra um alerta com o valor do input
+      alert(inputValor.value)
+    })
+  </script>
 </body>
+
 </html>
