--- a/homework/Denise/index.html
+++ b/homework/Denise/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title></title>
+  <title>Calcule sua média</title>
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -19,6 +19,7 @@
         <p class="media-titulo">Sua média é:<span class="media"> </span></p>
     </div>
   </div>
+  
   <script src="./js/script.js"></script>
 </body>
 
