--- a/exercicios-aula/Ex 2 - Dom/index.html
+++ b/exercicios-aula/Ex 2 - Dom/index.html
@@ -16,8 +16,22 @@
             <div>
                 <p id='item'>A PARAGRAPH</p>
                 <p class="hero">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, autem fugiat et recusandae voluptatem illo repudiandae porro. Porro illo ab dicta eius molestiae vel? Tempore consequatur autem reiciendis rem quod!</p>
+                <button id="botao" onclick="mudarCor()">Clique aqui</button>
             </div>
+
             <div class="container"></div>
-            <script src="js/script.js"></script>
+            <script>
+                // let btn = document.getElementById("botao")
+                // console.log(btn)
+                // let btn = document.querySelector("#botao")
+                let titulo = document.querySelector("h1")
+
+               function mudarCor(){
+                   titulo.style.backgroundColor = "yellow"
+               }
+
+            //    btn.addEventListener("click", mudarCor)
+
+            </script>
         </body>
     </html>
