Adicionando media aritmetica com JS

--- a/homework/index.html
+++ b/homework/index.html
@@ -19,7 +19,7 @@
         <p class="media-titulo">Sua média é:<span class="media"> </span></p>
     </div>
   </div>
-  <script>
+  <script src="js/script.js">
       
 
   </script>
