Acrescentado ao exercício um alerta interno (digamos assim) informando a média, notas e status da aprovação. Também foram sbstituidos os parseInt por number, bem como o parseInt da média por math.round.

--- a/homework/Denise/index.html
+++ b/homework/Denise/index.html
@@ -19,7 +19,14 @@
         <p class="media-titulo">Sua média é:<span class="media"> </span></p>
     </div>
   </div>
-  
+
+  <div class="resultado">
+    <h2 class= "status">Você foi:<span class="statusShow"> </span></h2>
+    <p class="notas">Suas notas foram:<span class="notasShow"> </span></p>
+    <p class="resultMedia">Sua média é:<span class="MediaShow"> </span></p>
+    <p id="button-ciente">Ciente</p>
+  </div>
+
   <script src="./js/script.js"></script>
 </body>
 
