--- a/homework/index.html
+++ b/homework/index.html
@@ -13,16 +13,15 @@
   <div class="container">
     <h1>Cálculo de Média</h1>
     <div name="calculo">
-        <input type="text" class="nota1" placeholder="Digitar Nota 1">
-        <input type="text" class="nota2" placeholder="Digitar Nota 2">
-        <p id="button">Calcular Média</p>
-        <p class="media-titulo">Sua média é:<span class="media"> </span></p>
+      <input type="text" id="nota1" placeholder="Digitar Nota 1" onkeypress="return somenteNumeros(event)">
+      <input type="text" id="nota2" placeholder="Digitar Nota 2" onkeypress="return somenteNumeros(event)">
+      <input type="text" id="nota3" placeholder="Digitar Nota 3" onkeypress="return somenteNumeros(event)">
+      <p id="button" value="calculo" onclick="btn()">Calcular Média</p>
+      <p class="media-titulo">Sua média é: <strong><span class="media"> </span></strong></p>
     </div>
+    <div id=res></div>
   </div>
-  <script>
-      
-
-  </script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
