--- a/homework/index.html
+++ b/homework/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br" dir="ltr">
+<html lang="en" dir="ltr">
 
   <head>
     <meta charset="utf-8" />
     <title></title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
 
   <body>
