--- a/homework/index.html
+++ b/homework/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Roleta da Nota</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
