adicionando exercício de casa JS-I

--- a/homework/index.html
+++ b/homework/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="pt-BR" dir="ltr">
 
 <head>
   <meta charset="utf-8" />
@@ -11,18 +11,18 @@
 
 <body>
   <div class="container">
-    <h1>Cálculo de Média</h1>
+    <h1>Calcule a sua média</h1>
     <div name="calculo">
-        <input type="text" class="nota1" placeholder="Digitar Nota 1">
-        <input type="text" class="nota2" placeholder="Digitar Nota 2">
+      <p>Qual foi a sua nota da Prova 1?</p>
+        <input type="text" min="0" max="10" class="nota1" placeholder="Digitar a nota">
+        <p>Qual foi a sua nota da Prova 2?</p>
+        <input type="text" min="0" max="10" class="nota2" placeholder="Digitar a nota">
         <p id="button">Calcular Média</p>
         <p class="media-titulo">Sua média é:<span class="media"> </span></p>
     </div>
   </div>
-  <script>
-      
+  <script src="js/script.js"></script>
 
-  </script>
 </body>
 
 </html>
