--- a/homework/index.html
+++ b/homework/index.html
@@ -15,15 +15,12 @@
     <div name="calculo">
         <input type="text" class="nota1" placeholder="Digitar Nota 1">
         <input type="text" class="nota2" placeholder="Digitar Nota 2">
-        <p id="button">Calcular Média</p>
+        <p id="button" >Calcular Média</p>
         <p class="media-titulo">Sua média é:<span class="media"> </span></p>
     </div>
   </div>
 
-  <script>
-      
-
-  </script>
+ <script src="./js/script.js"></script>
 </body>
 
 </html>
