--- a/homework/gabriela-castro/index.html
+++ b/homework/gabriela-castro/index.html
@@ -13,17 +13,14 @@
   <div class="container">
     <h1>Cálculo de Média</h1>
     <div name="calculo">
-        <input type="text" class="nota1" placeholder="Digitar Nota 1">
-        <input type="text" class="nota2" placeholder="Digitar Nota 2">
-        <p id="button">Calcular Média</p>
+        <input type="number" class="nota1" placeholder="Digitar Nota 1">
+        <input type="number" class="nota2" placeholder="Digitar Nota 2">
+        <button onclick="validaDados()" id="button">Calcular Média</button>
         <p class="media-titulo">Sua média é:<span class="media"> </span></p>
     </div>
   </div>
 
-  <script>
-      
-
-  </script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
