--- a/exercicios-aula/Ex 2 - Dom/index.html
+++ b/exercicios-aula/Ex 2 - Dom/index.html
@@ -14,6 +14,9 @@
         <body>
             <h1>Adicionando Estilos com JS</h1>
             <div>
+                <img class= "eu na aula" src= "https://media.giphy.com/media/3o7aTskHEUdgCQAXde/giphy.gif"</p>">
+            </div>
+            <div>
                 <p id='item'>A PARAGRAPH</p>
                 <p class="hero">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius debitis itaque incidunt sint, doloribus ducimus quae tempore quod maxime minima eveniet unde amet recusandae reiciendis libero quis excepturi laboriosam sunt!</p>
             </div>
