--- a/exercicios-aula/Ex 3 - Criar elemento/index.html
+++ b/exercicios-aula/Ex 3 - Criar elemento/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Adicionando Elementos com JS</title>
 </head>
 
 <body>
     <p>Click no botão para criar um elemento de tag P</p>
-    <button type="button" id="button">Adicionar</button>
+    <button type="button" id="button" onmouseover = "criarParagrafo()">Adicionar</button>
 
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
